Add flags, handle multiple files